# yigfs

./: README.md
client/: Cargo.toml
client/append_object/: Cargo.toml
client/append_object/src/: http_v4_client.rs  lib.rs  signature.rs
client/append_object/tests/: append_object_test.rs
client/common/: Cargo.toml
client/common/src/: config.rs  defer.rs  error.rs  http_client.rs  json.rs  lib.rs  numbers.rs  runtime.rs  thread.rs  time.rs  uuid.rs
client/common/tests/: config_log_test.rs  config_test.rs  http_client_test.rs  uuid_test.rs
client/common/tests/conf/: yigfs.toml  yigfs_log.yaml
client/filesystem_mgr/: Cargo.toml
client/filesystem_mgr/src/: file_handle.rs  handle.rs  lib.rs  types.rs  yigfs.rs
client/filesystem_mgr/tests/: file_handle_test.rs
client/interval_tree/: Cargo.toml
client/interval_tree/src/: interval.rs  lib.rs  tnode.rs  tree.rs
client/interval_tree/tests/: tree_test.rs
client/io_engine/: Cargo.toml
client/io_engine/src/: backend_storage.rs  backend_store_mgr.rs  cache_store.rs  disk_cache_store.rs  disk_io_thread.rs  disk_io_thread_pool.rs  disk_io_worker.rs  file_handle_ref.rs  io_thread.rs  io_thread_pool.rs  io_worker.rs  lib.rs  types.rs  yig_io_thread.rs  yig_io_worker.rs
client/metaservice_mgr/: Cargo.toml
client/metaservice_mgr/src/: lib.rs  message.rs  meta_op.rs  meta_store.rs  meta_thread.rs  meta_thread_pool.rs  meta_worker.rs  mgr.rs  mgr_impl.rs  types.rs
client/s3/: Cargo.toml
client/s3/src/: lib.rs  s3_client.rs  signature.rs  types.rs
client/s3/tests/: append_object_test.rs  get_object.rs  head_object_test.rs
client/segment_mgr/: Cargo.toml
client/segment_mgr/src/: file_handle.rs  file_meta_mgr.rs  heartbeat_mgr.rs  leader.rs  leader_local.rs  leader_mgr.rs  leader_not_support.rs  lib.rs  segment_mgr.rs  segment_state.rs  segment_sync.rs  segment_sync_handler.rs  types.rs
client/segment_mgr/tests/: file_handle_test.rs
client/yig_backend/: Cargo.toml
client/yig_backend/src/: backend.rs  event.rs  handler.rs  head_handler.rs  lib.rs  yig_handle.rs  yig_io_worker.rs
client/yigfs/: Cargo.toml
client/yigfs/src/: main.rs  options.rs
doc/: yigfs GC实现方案.doc  yigfs开发备忘录.md
server/: go.mod  go.sum  main.go
server/api/: .block-handler.go.swp  api-server.go  block-handler.go  block.go  dir-handler.go  dir.go  file-handler.go  leader-handler.go  leader.go  meta-interface.go  router.go  time.go
server/asynctasks/: run_task.go
server/asynctasks/tasks/: delete_blocks.go
server/endpoint/: check_request.go
server/error/: api-errors.go
server/helper/: config.go  logger.go
server/integrate/: metaservice.sql
server/integrate/metaconf/: metaservice.toml  servercert.pem  serverkey.pem
server/log/: log.go
server/message/builder/: builder.go  message_receiver.go  message_sender.go
server/message/kafka/consumer/: builder.go  consumer.go
server/message/kafka/producer/: builder.go  init.go  producer.go
server/message/types/: const.go  message.go
server/meta/: block.go  dir.go  file.go  file_blocks.go  leader.go  meta.go  segment_blocks.go  segment_info.go  segment_zone.go  zone.go
server/meta/client/: client.go
server/meta/client/tidbclient/: block.go  dir.go  file.go  file_blocks.go  file_leader.go  leader.go  segment_blocks.go  segment_info.go  segment_leader.go  segment_zone.go  tidbclient.go  zone.go
server/storage/: block.go  dir.go  file.go  leader.go  segment_block.go  storage.go
server/test/: .file_test.go.swo  block.go  file.go  file_test.go  segment.go
server/test/lib/: client.go
server/types/: block.go  consts.go  dir.go  file.go  leader.go  segment_block.go  zone.go
