[workspace]

members = [
    "yigfs",
    "io_engine",
    "filesystem_mgr",
    "metaservice_mgr",
    "segment_mgr",
    "common",
    "s3",
]


#[package]
#name = "yigfs"
#version = "0.1.0"
#authors = ["YuZou <hopkings2005@hotmail.com>"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
