[package]
name = "append_object"
version = "0.1.0"
authors = ["duanjh7 <18204311659@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
bytes = "1.0"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0", optional = true }
lazy_static = "1.4"
log = "0.4"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["time", "io-util", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
digest = "0.9.0"
hmac = "0.10"
md5 = "0.7"
hex = "0.4"
sha2 = "0.9"
rusoto_core = "0.46.0"
percent-encoding = "2.1.0"
