[package]
name = "append_object"
version = "0.1.0"
authors = ["duanjh7 <18204311659@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
bytes = "1.0"
log = "0.4"
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
digest = "0.9.0"
hmac = "0.10"
md5 = "0.7"
hex = "0.4"
sha2 = "0.9"
percent-encoding = "2.1.0"
