[package]
name = "common"
version = "0.1.0"
authors = ["YuZou <hopkings2005@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_derive = "1.0.119"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
bytes = "1"
time = "0.1"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
http = "0.2"
