[package]
name = "filesystem_mgr"
version = "0.1.0"
authors = ["YuZou <hopkings2005@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
libc = "0.2.81"
time = "0.1.38"
metaservice_mgr = {path = "../metaservice_mgr"}
segment_mgr = {path = "../segment_mgr"}
common = {path = "../common" }