[package]
name = "segment_mgr"
version = "0.1.0"
authors = ["YuZou <hopkings2005@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
metaservice_mgr = {path = "../metaservice_mgr"}
io_engine = {path = "../io_engine"}
yig_backend = { path = "../yig_backend" }
interval_tree = { path = "../interval_tree" }
tokio = { version = "1", features = ["full"] }
hash_ring = "0.2.0"
crossbeam-channel = "0.4"
log = "0.4.8"
log4rs = "0.11.0"