[package]
name = "yig_backend"
version = "0.1.0"
authors = ["YuZou <hopkings2005@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
io_engine = { path = "../io_engine" }
s3 = { path = "../s3" }
crossbeam-channel = "0.4"
tokio = { version = "1", features = ["full"]}
log = "0.4.8"