[package]
name = "yigfs"
version = "0.1.0"
authors = ["YuZou <hopkings2005@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
futures = "0.3"
filesystem_mgr = { path = "../filesystem_mgr" }
metaservice_mgr = { path = "../metaservice_mgr" }
common = { path = "../common" }
segment_mgr = {path = "../segment_mgr"}
io_engine = { path = "../io_engine" }